Surface elasticity support implemented
Added new elements, crosssections, and materials to support surface elsticitz

--- a/src/sm/CMakeLists.txt
+++ b/src/sm/CMakeLists.txt
@@ -16,6 +16,7 @@ set (sm_crosssection
     CrossSections/variablecrosssection.C
     CrossSections/warpingcrosssection.C
     CrossSections/latticecrosssection.C
+	CrossSections/simplesurfacecrosssection.C
     )
 
 set (sm_emodel
