Adding magneto effects to the nonlinear beam element

--- a/src/sm/Elements/CMakeLists.txt
+++ b/src/sm/Elements/CMakeLists.txt
@@ -130,11 +130,11 @@ set (sm_element
     structural3delement.C
     #phasefieldelement.C
     #qplanstrssphf.C
-	nlstructuralsurfaceelement.C
-	structural3dsurfaceelement.C
+    #nlstructuralsurfaceelement.C
+#	structural3dsurfaceelement.C
 	#surface elements
-	SurfaceElements/quadsurface.C
-	SurfaceElements/linesurface.C
+#	SurfaceElements/quadsurface.C
+#	SurfaceElements/linesurface.C
     )
 
 set (sm_interface_elements
