--- a/src/oofemlib/CMakeLists.txt
+++ b/src/oofemlib/CMakeLists.txt
@@ -119,6 +119,10 @@ if (USE_PARDISO_ORG)
   list (APPEND core_nm pardisoprojectorgsolver.C)
 endif ()
 
+if (USE_EIGEN)
+  list (APPEND core_nm eigensolver.C eigenmtrx.C eigensolverstability.C)
+endif ()
+
 
 set (core_fields
     fieldmanager.C
