Initial commit for MooneyRivlinHardMagnetic material. So far has the same functionality as MooneyRivlin.

--- a/src/sm/Materials/CMakeLists.txt
+++ b/src/sm/Materials/CMakeLists.txt
@@ -79,6 +79,8 @@ set (sm_material
     HyperelasticMaterials/simopistermaterial.C
     HyperelasticMaterials/ogdencompressiblematerial.C
     HyperelasticMaterials/hyperelasticmaterial1d.C
+    #Magnetoelasticity
+    MagnetoelasticMaterials/mooneyrivlinhardmagnetic.C
     #Lattice models
     LatticeMaterials/latticematstatus.C
     LatticeMaterials/latticestructuralmaterial.C	
