--- a/src/mpm/CMakeLists.txt
+++ b/src/mpm/CMakeLists.txt
@@ -8,6 +8,15 @@ set (mpm_element
     tm.C
     )
 
+set (magnetoelasticity
+    termlibrary4.C
+    magnetoelasticelement.C
+    MagnetoElasticity/Materials/hardmagneticmooneyrivlincompressiblematerial.C
+    MagnetoElasticity/Materials/magnetoelasticmaterialstatus.C
+    MagnetoElasticity/CrossSections/magnetoelasticcrosssection.C
+    )
+
+
     set (mpm_problems
     mpmproblem.C
     )
@@ -15,11 +24,17 @@ set (mpm_element
 set (mpm
     ${mpm_element}
     ${mpm_problems}
+    ${magnetoelasticity}
     )
 
 add_library (mpm
     ${LIB_TYPE}
-    ${mpm}
+    ${mpm}    
     )
+
+
+
+
+
 
 add_dependencies(mpm version)
