Triangular surface element added

--- a/src/sm/Elements/CMakeLists.txt
+++ b/src/sm/Elements/CMakeLists.txt
@@ -136,6 +136,7 @@ set (sm_element
 	structural2dsurfaceelement.C
 	#surface elements
 	SurfaceElements/quadsurface.C
+	SurfaceElements/triangularsurface.C
 	SurfaceElements/linesurface.C
 	SurfaceElements/axilinesurface.C
     )
