Adding nonlinear beam with internal contact

--- a/src/sm/Elements/CMakeLists.txt
+++ b/src/sm/Elements/CMakeLists.txt
@@ -37,6 +37,7 @@ set (sm_element
     Beams/beam2d.C 
     Beams/beam3d.C
     Beams/nlbeam_sm.C
+    Beams/nlbeam_internalcontact.C	
     Beams/libeam3dboundary.C
     Beams/libeam3dboundarytruss.C
     Beams/libeam3dboundarymembrane.C
