major IGA commit
IGA for large strains added, iga for surface added, VTK export for IGA added, second gradient dependence added, axisymmetric and plane strain elements added

--- a/src/sm/Elements/CMakeLists.txt
+++ b/src/sm/Elements/CMakeLists.txt
@@ -1,6 +1,8 @@
 set (sm_element
     structuralelementevaluator.C
+	structuralsurfaceelementevaluator.C
     igaelements.C
+	igasurfaceelements.C
     structuralelement.C
     nlstructuralelement.C
     structural2delement.C
@@ -151,6 +153,8 @@ set (sm_element
 	SurfaceElements/linesurface.C
 	SurfaceElements/axilinesurface.C
 	SurfaceElements/lineplanestrainsurface.C
+	SurfaceElements/space3dsurfaceelementevaluator.C
+	SurfaceElements/space2dsurfaceelementevaluator.C
     )
 
 set (sm_interface_elements
